kube-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: anjasmara_service_users_v1-nodeport-service
  labels:
    app: eanjasmara_service_users_v1  
spec:
  type: NodePort
  selector:
    app: eanjasmara_service_users_v1
  ports:
    - port: 3000
      targetPort: 80
